# scandium

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  flake.nix  justfile  lefthook.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml
.sqlx/: query-09a1b0b7d20f5b3b35366ba1e4086799c58f04481f0642adf7db794eeca0b4b6.json  query-11f87f0e0fab3f4409df3cead727bc3774ac2bb99221c39762c6d93db5a9b6e2.json  query-2b389ac06036dd15bf0cc81ab93cd82506d55fd4b647b63d973f2f23e78d88f0.json  query-34258b24d2a9af3f1454619cc4c267dce4bb8e23255c26eca718f495715392f1.json  query-4178c1e088b05757756641bf62b25a174b118797162abc7d749088bf1e948e68.json  query-4607d7ae319b4f67171cc177affaebbe9d8d1c9cedb9e7b81a276aeb816dea57.json  query-504d07d1d9bea21f447c69e4a3b7fe016121d81d4249485876fa4f6bdd1ee8bb.json  query-58d09c6665fce471ed64d179793387ad830b9c589d6a5132b555b94e24907348.json  query-5dcbfbb14f0c66a3fc8bf119b4126b87ba72ad1baedffad16adb4fdda02bdea3.json  query-66238983a5fae48b441f330edb034991a35289ad6146020ba3f99738196f4e6e.json  query-97df025ad790d07b5fd346aea1b5737367a57221013744951cebd7a6626a84fb.json  query-bd0dbcb6adc3475b336b6fcce2d35bb1f10185ad8bd33463fffb30fa02a701cd.json  query-d7723042fada068e3ff3d54c0c8f53602cdb4fd9a07269bcaa28d3646fb4c979.json  query-e1b96e109cf62c35fce5a14cc1cc391b9126d60b6dbefc032865917e8f50976b.json  query-f334b1d30c2b5387667dfb86a22312546c6586bc3fb31828e0becca94dfc40d5.json  query-fe0d4b10d8f1079ebd2e4c6fd704ccb34d1a391b0c53f9b5df9a78178ca039ef.json
apps/api/: Cargo.toml  README.md
apps/api/src/: errors.rs  main.rs  routes.rs  state.rs
apps/api/src/middleware/: auth.rs
apps/api/src/routes/: auth.rs  health.rs  listing.rs  user.rs  users.rs
apps/consumer/: Cargo.toml  README.md
apps/consumer/src/: events.rs  main.rs
apps/consumer/src/processors/: listing.rs
crates/application/: Cargo.toml  README.md
crates/application/src/: lib.rs
crates/application/src/auth/: forgot_password.rs  login.rs  mod.rs  register.rs  reset_password.rs  verify_reset_token.rs
crates/application/src/listing/: create_listing.rs  mod.rs  search_listing.rs
crates/application/src/user/: create_user.rs  get_user.rs
crates/domain/: Cargo.toml  README.md
crates/domain/src/: lib.rs
crates/domain/src/auth/: email.rs  entity.rs  error.rs  mod.rs  repository.rs
crates/domain/src/listing/: document.rs  entity.rs  error.rs  events.rs  mod.rs  repository.rs  search.rs
crates/domain/src/user/: entity.rs  error.rs  mod.rs  repository.rs  service.rs  validation.rs
crates/infrastructure/: Cargo.toml  README.md
crates/infrastructure/src/: jwt.rs  lib.rs
crates/infrastructure/src/elasticsearch/: listing_index.rs  listing_search.rs  mod.rs
crates/infrastructure/src/email/: resend.rs
crates/infrastructure/src/kafka/: producer.rs
crates/infrastructure/src/postgres/: listing_repository.rs  mod.rs  password_reset_repository.rs  user_repository.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: lib.rs  password.rs  types.rs
docker/: frontend.Dockerfile  rust.Dockerfile
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/@modal/(.)auth/: page.tsx
frontend/src/app/[locale]/@modal/(.)auth/forgot-password/: page.tsx
frontend/src/app/[locale]/auth/: page.tsx
frontend/src/app/[locale]/auth/forgot-password/: page.tsx
frontend/src/app/[locale]/auth/reset-password/: page.tsx
frontend/src/components/: locale-menu.tsx  navbar.tsx  providers.tsx  search-bar.tsx  theme-toggle.tsx
frontend/src/components/auth/: auth-form.tsx  forgot-password-form.tsx  reset-password-form.tsx
frontend/src/components/listings/: filter-sidebar.tsx  listing-card.tsx  pagination.tsx
frontend/src/components/listings/filters/: category-filter.tsx  condition-filter.tsx  price-filter.tsx
frontend/src/components/navbar/: locale-menu.tsx  navbar.tsx  theme-toggle.tsx
frontend/src/components/ui/: badge.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx  tooltip.tsx
frontend/src/contexts/: user-context.ts
frontend/src/i18n/: request.ts  routing.ts
frontend/src/lib/: mock-data.ts
frontend/src/types/: listing.ts
frontend/translations/: en.json  fi.json
migrations/: 20260422094710_create_users.sql  20260422094719_create_oauth_accounts.sql  20260422094725_create_api_keys.sql  20260504135234_create_password_reset_tokens.sql  20260510163846_create_listings.sql  20260510163850_create_listing_images.sql  20260514200822_add_year_to_listings.sql
scripts/: README.md  create_kafka_topics.sh  seed_listings.sh
