[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/consumer",
    "crates/domain",
    "crates/infrastructure",
    "crates/application",
    "crates/shared",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }

# Redis
redis = { version = "1.2.0", features = ["tokio-comp"] }

# Kafka
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

# Elasticsearch
elasticsearch = "9.1.0-alpha.1"

# Auth
jsonwebtoken = "10.3.0"
argon2 = "0.5"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3"
validator = { version = "0.20.0", features = ["derive"] }
