[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/consumer",
    "crates/domain",
    "crates/infrastructure",
    "crates/application",
    "crates/shared",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
elasticsearch = "8.5.0-alpha.1"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15"
resend-rs = "0.25"
rand = { version = "0.10", features = ["std"] }
hex = "0.4.3"
sha2 = "0.11.0"
