[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../crates/domain" }
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }
shared = { path = "../../crates/shared" }
tokio = { workspace = true }
rdkafka = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
