[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../crates/domain" }
infrastructure = { path = "../../crates/infrastructure" }
tokio = { workspace = true }
rdkafka = { workspace = true }
elasticsearch = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
