[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
async-trait = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
