[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
async-trait = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
