[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
async-trait = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
rdkafka = { workspace = true }
elasticsearch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
resend-rs = { workspace = true }
